fixed alignment

--- a/LearnApp/static/style/style.css
+++ b/LearnApp/static/style/style.css
@@ -42,7 +42,7 @@
     padding-top: 2rem;
 }
 
-.inner {
+.link-inner {
     padding: 0;
     font-size: 1.6rem;
 }
